--- a/views/layout.pug
+++ b/views/layout.pug
@@ -2,6 +2,7 @@ doctype html
 html
   head
     title= title
+    meta(name="viewport", content="width=device-width, initial-scale=1")
     link(rel='stylesheet', href='https://cdnjs.cloudflare.com/ajax/libs/bulma/0.5.1/css/bulma.min.css')
     link(rel='stylesheet', href='/stylesheets/style.css')
     link(rel="apple-touch-icon", sizes="144x144", href="/images/mobile.png")
