--- a/views/layout.pug
+++ b/views/layout.pug
@@ -8,4 +8,5 @@ html
     link(rel="apple-touch-icon", sizes="144x144", href="/images/mobile.png")
     link(rel="apple-touch-icon-precomposed", sizes="144x144", href="/images/mobile.png")
   body
-    block content
+    .container
+      block content
